# ProjetoEngenharia

./: Algorithms.hs  Calculus.hs  DataStructures.hs  Geometry.hs  LinearAlgebra.hs  Types.hs  Validation.hs  project.cabal  stack.yaml
Documentation/: EXAMPLES.md  README.md
Engineering/: All.hs  Civil.hs  Electrical.hs  Mechanical.hs
Tests/: AllTests.hs
